# MusicRanker

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: AlbumForm.tsx  ArtistDetailDropdown.tsx  ArtistForm.tsx  ConfirmDialog.tsx  GenreChooser.tsx  GenreForm.tsx  GenreTree.tsx  MovieForm.tsx  MovieGenreChooser.tsx  MovieGenreForm.tsx  MovieGenreTree.tsx  PersonForm.tsx  SortableList.tsx
frontend/src/pages/: AlbumDetailPage.tsx  ArtistDetailPage.tsx  ArtistsPage.tsx  GenreDetailPage.tsx  GenresPage.tsx  HomePage.tsx  MovieDetailPage.tsx  MovieGenreDetailPage.tsx  MovieGenresPage.tsx  MovieStatsPage.tsx  MoviesPage.tsx  PeopleGraphPage.tsx  PeoplePage.tsx  StatsPage.tsx  (+1 more)
scripts/: imdb_import.py  movie_credits.py  movie_person_check.py
server/: database.py  initialize_database.py  main.py  ranking.py  snapshot.py  snapshot_load.py  snapshot_save.py
server/api_models/: __init__.py  album.py  artist.py  base.py  genre.py  movie.py  movie_genre.py  person.py
server/database_models/: __init__.py  album.py  album_artist.py  album_genre.py  album_movie_soundtrack.py  artist.py  artist_band_role.py  artist_person.py  genre.py  genre_parent.py  movie.py  movie_cast_member.py  movie_genre.py  movie_person.py  nationality.py  person.py
server/load/: load_data.py
server/routers/: albums.py  artists.py  genres.py  movie_genres.py  movie_stats.py  movies.py  persons.py  stats.py
