[project]
name = "music_ranker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg[binary]",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.flake8]
max-line-length = 120
extend-ignore = """
    E203
    E402
"""

[tool.isort]
profile = "black"
